# C2E2-Tool

./: .gitignore  LOS1  Makefile  Makefile_new  Makefile_orig  README  develop.code-workspace  installC2E2  installC2E2.sh  installGLPK  installRequirements  installRequirements.sh  issues.txt  notes.txt  runC2E2  test  testC2E2
BackupExamples/: README  (+17 more)
capd/capdDynSys4/examples/LorenzPeriodicOrbit/: LorenzPeriodicOrbit.cpp  LorenzPeriodicOrbit.dox  Makefile  Makefile.am  Makefile.in
capd/capdDynSys4/examples/maps/: Makefile  Makefile.am  Makefile.in  hessianExample.cpp  jetExample.cpp  mapExample.cpp  maps.dox
capd/capdDynSys4/examples/odes/: DTaylorExample.cpp  DTaylorVariationalEquationsExample.cpp  DTimeMapExample.cpp  DTimeMapMonodromyMatrixCurveExample.cpp  DTimeMapSolutionCurveExample.cpp  DTimeMapStepControlExample.cpp  DTimeMapVariationalEquationsExample.cpp  Makefile  Makefile.am  Makefile.in  odes_nonrigorous.dox  odes_nonrigorous_onestep.dox  odes_nonrigorous_timemap.dox  odesvar_nonrigorous.dox
capd/capdDynSys4/include/: Makefile  Makefile.am  Makefile.in
capd/capdDynSys4/include/capd/: capdlib.h  config-capdDynSys.h  mpcapdlib.h  stamp-h1
capd/capdDynSys4/include/capd/autodiff/: DagIndexer.h  EvalAdd.h  EvalDiv.h  EvalExp.h  EvalLog.h  EvalMul.h  EvalNaturalPow.h  EvalPow.h  EvalSinCos.h  EvalSqr.h  EvalSqrt.h  EvalSub.h  EvalUnaryMinus.h  NodeType.h  eval.hpp
capd/capdDynSys4/include/capd/covrel/: GraphicsHSet3D.h  GraphicsTripleSet.h  GridSet.h  HSet3D.h  TripleSet.h
capd/capdDynSys4/include/capd/diffAlgebra/: BasicC2Curve.h  BasicC2Curve.hpp  BasicCnCurve.h  BasicCnCurve.hpp  BasicCurve.h  BasicCurve.hpp  C0Coeff.h  C1Coeff.h  C2Coeff.h  C2Curve.h  CnCoeff.h  CnCoeff.hpp  CnContainer.h  CnCurve.h  CnCurve.hpp  Curve.h  Curve.hpp  CurveInterface.h  FadCurve.h  FadCurve.hpp  Hessian.h  Jet.h  Jet.hpp  Node_powsqr.hpp  ParametricCurve.h  SolutionCurve.h  fdlib.h  lib.h
capd/capdDynSys4/include/capd/diffIncl/: DiffInclusion.h  DiffInclusion.hpp  DiffInclusionCW.h  DiffInclusionCW.hpp  DiffInclusionLN.h  DiffInclusionLN.hpp  InclRect2Set.h  InclRect2Set.hpp  MultiMap.h  lib.h
capd/capdDynSys4/include/capd/dynset/: AffineCoordinateChange.h  C0AffineSet.h  C0AffineSet.hpp  C0BallSet.h  C0BallSet.hpp  C0DoubletonSet.h  C0DoubletonSet.hpp  C0FlowballSet.hpp  C0GraphicalSet.h  C0HODoubletonSet.h  C0HOSet.h  C0HOSet.hpp  C0Set.h  C0TripletonSet.h  C0TripletonSet.hpp  C11Rect2.h  C11Rect2Set.h  C1AffineSet.h  C1DoubletonSet.h  C1DoubletonSet.hpp  C1Set.h  C2DoubletonSet.h  C2DoubletonSet.hpp  C2Set.h  CnDoubletonSet.h  CnDoubletonSet.hpp  CnRect2MultiLip.h  CnRect2MultiLip.hpp  CnRect2Set.h  CnRect2Set.hpp  CnSet.h  DefaultPolicy.h  EnclosureHolder.h  QRPolicy.h  fdlib.h  lib.h  mplib.h  typedefs.h
capd/capdDynSys4/include/capd/dynset/reorganization/: CoordWiseReorganization.h  FactorPolicy.h  FactorReorganization.h  InvBByCFactorReorganization.h  NoReorganization.h  QRReorganization.h
capd/capdDynSys4/include/capd/dynsys/: BasicC2Taylor.h  BasicC2Taylor.hpp  BasicCnTaylor.h  BasicCnTaylor.hpp  BasicFadTaylor.h  BasicFadTaylor.hpp  BasicTaylor.h  BasicTaylor.hpp  C1DynSys.h  C2DynSys.h  C2Taylor.h  C2Taylor.hpp  CnDynSys.h  CnTaylor.h  CnTaylor.hpp  CnTaylor_enclosure.hpp  CnTaylor_phi.hpp  CnTaylor_remainder.hpp  CnTaylor_templateMembers.h  DynSys.h  DynSysMap.h  FadMap.h  FadTaylor.h  FadTaylor.hpp  FadTaylorHOE.h  FadTaylorHOE.hpp  Move.h  StepControl.h  Taylor.h  Taylor.hpp  TaylorException.h  TaylorHOE.h  TaylorHOE.hpp  dynsysLib.h  enclosure.hpp  fdlib.h  highOrderEnclosure.h  lib.h  mplib.h  typedefs.h
capd/capdDynSys4/include/capd/geomset/: AffineSet.h  AffineSet.hpp  CenteredAffineSet.h  CenteredAffineSet.hpp  CenteredDoubletonSet.h  CenteredDoubletonSet.hpp  DoubletonSet.h  DoubletonSet.hpp  MatrixAffineSet.h  MatrixAffineSet.hpp  MatrixDoubletonSet.h  MatrixDoubletonSet.hpp  lib.h
capd/capdDynSys4/include/capd/map/: BasicFunction.h  BasicFunction.hpp  DefaultOrder.h  Function.h  Function.hpp  Map.h  Map.hpp  Map_codeTranslation.hpp  Map_headerTemplate.h  Parser.h  fdlib.h  lib.h
capd/capdDynSys4/include/capd/newton/: Krawczyk.hpp
capd/capdDynSys4/include/capd/normalForms/: linearSubstitution.hpp  normalForms.h  planarMaps.hpp
capd/capdDynSys4/include/capd/poincare/: BasicPoincareMap.h  BasicPoincareMap.hpp  BasicPoincareMap_inline.h  BasicPoincareMap_operator.hpp  BasicPoincareMap_template.h  PoincareException.h  PoincareMap.h  PoincareMap.hpp  PoincareMap_templateMembers.h  PoincareMap_templateOperator.h  SaveStepControl.h  TimeMap.h  TimeMap.hpp  TimeMap_template.h  fdlib.h  lib.h  typedefs.h
capd/capdDynSys4/src/capd/diffAlgebra/: C1Coeff.cpp  C2Coeff.cpp  CnCoeff.cpp  Curve.cpp  Hessian.cpp  Makefile  Makefile.am  Makefile.in  Node.cpp  SolutionCurve.cpp  capddiffAlgebra.pc
capd/capdDynSys4/src/capd/diffAlgebra/.deps/: libcapddiffAlgebra_a-C1Coeff.Po  libcapddiffAlgebra_a-C2Coeff.Po  libcapddiffAlgebra_a-CnCoeff.Po  libcapddiffAlgebra_a-Curve.Po  libcapddiffAlgebra_a-Hessian.Po  libcapddiffAlgebra_a-Node.Po  libcapddiffAlgebra_a-SolutionCurve.Po
capd/capdDynSys4/src/capd/dynset/: C0BallSet.cpp  C0FlowballSet.cpp  C0HODoubletonSet.cpp  C11Rect2Set.cpp  CnRect2MultiLip.cpp  CnRect2MultiMatrix.cpp  CnRect2Set.cpp  CoordReorganize.cpp  FactorReorganization.cpp  Makefile  Makefile.am  Makefile.in  capddynset.pc
capd/capdDynSys4/src/capd/dynset/.deps/: libcapddynset_a-C0AffineSet.Po  libcapddynset_a-C0BallSet.Po  libcapddynset_a-C0DoubletonSet.Po  libcapddynset_a-C0FlowballSet.Po  libcapddynset_a-C0HODoubletonSet.Po  libcapddynset_a-C0HOSet.Po  (+10 more)
capd/capdDynSys4/src/capd/dynsys/: C2Taylor.cpp  CnTaylor.cpp  FadTaylor.cpp  Makefile  Makefile.am  Makefile.in  Taylor.cpp  TaylorHOE.cpp  capddynsysm.pc
capd/capdDynSys4/src/mpcapd/dynset/: C0HOSet.cpp  C2Rect2.cpp  CnRect2.cpp  CnRect2MultiLip.cpp  CnRect2MultiMatrix.cpp  CoordReorganize.cpp  Makefile  Makefile.am  Makefile.in  mpcapddynset.pc
capd/capdDynSys4/src/mpcapd/map/: C2Coeff.cpp  CnCoeff.cpp  Function.cpp  Makefile  Makefile.am  Makefile.in  Map.cpp  Node.cpp  mpcapdmap.pc
(+1163 files in other folders)
