include ${capdMake}/make/common_makefile.mkf

nobase_include_HEADERS = \
capd/autodiff/DagIndexer.h \
capd/autodiff/DagIndexer.hpp \
capd/autodiff/EvalAdd.h \
capd/autodiff/EvalDiv.h \
capd/autodiff/EvalExp.h \
capd/autodiff/eval.hpp \
capd/autodiff/EvalLog.h \
capd/autodiff/EvalMul.h \
capd/autodiff/EvalNaturalPow.h \
capd/autodiff/EvalPow.h \
capd/autodiff/EvalSinCos.h \
capd/autodiff/EvalSqr.h \
capd/autodiff/EvalSqrt.h \
capd/autodiff/EvalSub.h \
capd/autodiff/EvalUnaryMinus.h \
capd/autodiff/NodeType.h \
capd/capdlib.h \
capd/covrel/GraphicsHSet3D.h \
capd/covrel/GraphicsTripleSet.h \
capd/covrel/GridSet.h \
capd/covrel/GridSets.h \
capd/covrel/HSet2D.h \
capd/covrel/HSet3D.h \
capd/covrel/HSet.h \
capd/covrel/HSetMD.h \
capd/covrel/HSetMD.hpp \
capd/covrel/HSetND.h \
capd/covrel/HSetND.hpp \
capd/covrel/TripleSet.h \
capd/diffAlgebra/BasicC2Curve.h \
capd/diffAlgebra/BasicC2Curve.hpp \
capd/diffAlgebra/BasicCnCurve.h \
capd/diffAlgebra/BasicCnCurve.hpp \
capd/diffAlgebra/BasicCurve.h \
capd/diffAlgebra/BasicCurve.hpp \
capd/diffAlgebra/C0Coeff.h \
capd/diffAlgebra/C1Coeff.h \
capd/diffAlgebra/C2Coeff.h \
capd/diffAlgebra/C2Curve.h \
capd/diffAlgebra/C2Curve.hpp \
capd/diffAlgebra/CnCoeff.h \
capd/diffAlgebra/CnCoeff.hpp \
capd/diffAlgebra/CnContainer.h \
capd/diffAlgebra/CnCurve.h \
capd/diffAlgebra/CnCurve.hpp \
capd/diffAlgebra/CoeffTraits.h \
capd/diffAlgebra/Curve.h \
capd/diffAlgebra/Curve.hpp \
capd/diffAlgebra/CurveInterface.h \
capd/diffAlgebra/FadCurve.h \
capd/diffAlgebra/FadCurve.hpp \
capd/diffAlgebra/fdlib.h \
capd/diffAlgebra/Hessian.h \
capd/diffAlgebra/Hessian.hpp \
capd/diffAlgebra/HomogenousPolynomial.h \
capd/diffAlgebra/Jet.h \
capd/diffAlgebra/Jet.hpp \
capd/diffAlgebra/lib.h \
capd/diffAlgebra/Node_explog.hpp \
capd/diffAlgebra/Node.h \
capd/diffAlgebra/Node.hpp \
capd/diffAlgebra/Node_invtrig.hpp \
capd/diffAlgebra/Node_muldiv.hpp \
capd/diffAlgebra/Node_plusminus.hpp \
capd/diffAlgebra/Node_powsqr.hpp \
capd/diffAlgebra/Node_sincos.hpp \
capd/diffAlgebra/ParametricCurve.h \
capd/diffAlgebra/SeriesContainer.h \
capd/diffAlgebra/SolutionCurve.h \
capd/diffAlgebra/TimeRange.h \
capd/diffIncl/DiffInclusionCW.h \
capd/diffIncl/DiffInclusionCW.hpp \
capd/diffIncl/DiffInclusion.h \
capd/diffIncl/DiffInclusion.hpp \
capd/diffIncl/DiffInclusionLN.h \
capd/diffIncl/DiffInclusionLN.hpp \
capd/diffIncl/InclRect2Set.h \
capd/diffIncl/InclRect2Set.hpp \
capd/diffIncl/lib.h \
capd/diffIncl/MultiMap.h \
capd/dynset/AffineCoordinateChange.h \
capd/dynset/C0AffineSet.h \
capd/dynset/C0AffineSet.hpp \
capd/dynset/C0BallSet.h \
capd/dynset/C0BallSet.hpp \
capd/dynset/C0DoubletonSet.h \
capd/dynset/C0DoubletonSet.hpp \
capd/dynset/C0FlowballSet.h \
capd/dynset/C0FlowballSet.hpp \
capd/dynset/C0GraphicalSet.h \
capd/dynset/C0HODoubletonSet.h \
capd/dynset/C0HODoubletonSet.hpp \
capd/dynset/C0HOSet.h \
capd/dynset/C0HOSet.hpp \
capd/dynset/C0Set.h \
capd/dynset/C0TripletonSet.h \
capd/dynset/C0TripletonSet.hpp \
capd/dynset/C11Rect2.h \
capd/dynset/C11Rect2.hpp \
capd/dynset/C11Rect2Set.h \
capd/dynset/C11Rect2Set.hpp \
capd/dynset/C1AffineSet.h \
capd/dynset/C1AffineSet.hpp \
capd/dynset/C1DoubletonSet.h \
capd/dynset/C1DoubletonSet.hpp \
capd/dynset/C1GraphicalSet.h \
capd/dynset/C1Set.h \
capd/dynset/C2DoubletonSet.h \
capd/dynset/C2DoubletonSet.hpp \
capd/dynset/C2Set.h \
capd/dynset/CnDoubletonSet.h \
capd/dynset/CnDoubletonSet.hpp \
capd/dynset/CnRect2MultiLip.h \
capd/dynset/CnRect2MultiLip.hpp \
capd/dynset/CnRect2Set.h \
capd/dynset/CnRect2Set.hpp \
capd/dynset/CnSet.h \
capd/dynset/CoordinateSystem.h \
capd/dynset/DefaultPolicy.h \
capd/dynset/dynsetLib.h \
capd/dynset/EnclosureHolder.h \
capd/dynset/fdlib.h \
capd/dynset/lib.h \
capd/dynset/mplib.h \
capd/dynset/QRPolicy.h \
capd/dynset/reorganization/CanonicalReorganization.h \
capd/dynset/reorganization/CoordWiseReorganization.h \
capd/dynset/reorganization/FactorPolicy.h \
capd/dynset/reorganization/FactorReorganization.h \
capd/dynset/reorganization/InvBByCFactorReorganization.h \
capd/dynset/reorganization/NoReorganization.h \
capd/dynset/reorganization/QRReorganization.h \
capd/dynset/reorganization/SwapReorganization.h \
capd/dynset/SetTraits.h \
capd/dynset/typedefs.h \
capd/dynsys/BasicC2Taylor.h \
capd/dynsys/BasicC2Taylor.hpp \
capd/dynsys/BasicCnTaylor.h \
capd/dynsys/BasicCnTaylor.hpp \
capd/dynsys/BasicFadTaylor.h \
capd/dynsys/BasicFadTaylor.hpp \
capd/dynsys/BasicTaylor.h \
capd/dynsys/BasicTaylor.hpp \
capd/dynsys/C1DynSys.h \
capd/dynsys/C2DynSys.h \
capd/dynsys/C2Taylor.h \
capd/dynsys/C2Taylor.hpp \
capd/dynsys/CnDynSys.h \
capd/dynsys/CnTaylor_enclosure.hpp \
capd/dynsys/CnTaylor.h \
capd/dynsys/CnTaylor.hpp \
capd/dynsys/CnTaylor_phi.hpp \
capd/dynsys/CnTaylor_remainder.hpp \
capd/dynsys/CnTaylor_templateMembers.h \
capd/dynsys/DynSys.h \
capd/dynsys/DynSys.hpp \
capd/dynsys/dynsysLib.h \
capd/dynsys/DynSysMap.h \
capd/dynsys/enclosure.h \
capd/dynsys/enclosure.hpp \
capd/dynsys/FadMap.h \
capd/dynsys/FadTaylor.h \
capd/dynsys/FadTaylorHOE.h \
capd/dynsys/FadTaylorHOE.hpp \
capd/dynsys/FadTaylor.hpp \
capd/dynsys/fdlib.h \
capd/dynsys/filibfadbad.h \
capd/dynsys/highOrderEnclosure.h \
capd/dynsys/lib.h \
capd/dynsys/Linear2d.h \
capd/dynsys/Linear3d.h \
capd/dynsys/Move.h \
capd/dynsys/mplib.h \
capd/dynsys/OdeNumTaylor.h \
capd/dynsys/OdeNumTaylor.hpp \
capd/dynsys/OdeTraits.h \
capd/dynsys/StepControl.h \
capd/dynsys/TaylorException.h \
capd/dynsys/Taylor.h \
capd/dynsys/TaylorHOE.h \
capd/dynsys/TaylorHOE.hpp \
capd/dynsys/Taylor.hpp \
capd/dynsys/typedefs.h \
capd/dynsys/VLin3D.h \
capd/fdcapdlib.h \
capd/geomset/AffineSet.h \
capd/geomset/AffineSet.hpp \
capd/geomset/CenteredAffineSet.h \
capd/geomset/CenteredAffineSet.hpp \
capd/geomset/CenteredDoubletonSet.h \
capd/geomset/CenteredDoubletonSet.hpp \
capd/geomset/DoubletonSet.h \
capd/geomset/DoubletonSet.hpp \
capd/geomset/lib.h \
capd/geomset/MatrixAffineSet.h \
capd/geomset/MatrixAffineSet.hpp \
capd/geomset/MatrixDoubletonSet.h \
capd/geomset/MatrixDoubletonSet.hpp \
capd/map/BasicFunction.h \
capd/map/BasicFunction.hpp \
capd/map/CnCoeffSlice.h \
capd/map/DefaultOrder.h \
capd/map/fdlib.h \
capd/map/Function.h \
capd/map/Function.hpp \
capd/map/lib.h \
capd/map/Map_codeTranslation.hpp \
capd/map/Map.h \
capd/map/Map_headerTemplate.h \
capd/map/Map.hpp \
capd/map/mapLib.h \
capd/map/mplib.h \
capd/map/Parser.h \
capd/mpcapdlib.h \
capd/newton/Krawczyk.h \
capd/newton/Krawczyk.hpp \
capd/newton/Mapping.h \
capd/newton/Newton.h \
capd/newton/Newton.hpp \
capd/newton/NewtonResult.h \
capd/normalForms/linearSubstitution.hpp \
capd/normalForms/normalForms.h \
capd/normalForms/planarMaps.hpp \
capd/pdes/PolynomialBound.h \
capd/pdes/PolynomialBound.hpp \
capd/poincare/BasicPoincareMap.h \
capd/poincare/BasicPoincareMap.hpp \
capd/poincare/BasicPoincareMap_inline.h \
capd/poincare/BasicPoincareMap_operator.hpp \
capd/poincare/BasicPoincareMap_template.h \
capd/poincare/fdlib.h \
capd/poincare/lib.h \
capd/poincare/PoincareException.h \
capd/poincare/poincareLib.h \
capd/poincare/PoincareMap.h \
capd/poincare/PoincareMap.hpp \
capd/poincare/PoincareMap_templateMembers.h \
capd/poincare/PoincareMap_templateOperator.h \
capd/poincare/SaveStepControl.h \
capd/poincare/TimeMap.h \
capd/poincare/TimeMap.hpp \
capd/poincare/TimeMap_inline.h \
capd/poincare/TimeMap_template.h \
capd/poincare/typedefs.h


